# YAMP

./: .gitignore  LICENSE  README.md  YAMP.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: YAMP.hs
src/YAMP/: Calculus.hs  Combinatorics.hs  LinearAlgebra.hs  NumberTheory.hs  calculus.hs
src/YAMP/LinearAlgebra/: Matrix.hs  Vector.hs
